# basic-bot-template

./: README.md  example.py  example_bot.py  install.sh  llm_utils.py  pii_utils.py  pyproject.toml  run.sh
