[tool.poetry]
name = "basic-bot-template"
version = "0.1.0"
description = ""
authors = ["richard.gong <richard.gong@robinhood.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
openai = "1.30.1"
docstring-parser = "0.16"
pydantic = "1.10.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
